--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.58.0",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/react-transition-group": "^4.4.5",
     "@types/styled-components": "^5.1.26",
     "tailwindcss": "^3.2.7"
   }
