--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
     "graphql": "^16.6.0",
+    "jwt-decode": "^3.1.2",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
     "next": "^13.1.6",
@@ -28,6 +29,7 @@
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "react-transition-group": "^4.4.5",
     "sass": "^1.58.0",
     "styled-components": "^5.3.6",
